@@ -47,7 +47,9 @@ _OPTIONS = [
  ('U', 0, 'reuseattr', 'redefiningFunction', 'check if function/class/method names are reused'),
  None,
  ('r', 0, 'returnvalues', 'checkReturnValues', 'check consistent return values'),
+ ('C', 0, 'implicitreturns', 'checkImplicitReturns', 'check if using implict and explicit return values'),
  ('O', 0, 'objattrs', 'checkObjectAttrs', 'check that attributes of objects exist'),
+ ('D', 0, 'intdivide', 'intDivide', 'check if using integer division'),
  None,
  ('q', 0, 'stdlib', 'ignoreStandardLibrary', 'ignore warnings from files under standard library'),
  ('b', 1, 'blacklist', 'blacklist', 'ignore warnings from the list of modules\n\t\t\t'),
@@ -172,6 +174,8 @@ class Config :
 
         self.checkObjectAttrs = 1
         self.checkReturnValues = 1
+        self.checkImplicitReturns = 0
+        self.intDivide = 1
 
     def loadFile(self, filename) :
         suppressions = {}
