@@ -1,0 +1,9 @@
+'d'
+
+def x():
+    d = e = 7
+    print d / e
+    print d / 3
+    print 7 / e
+    print 5 / 6
+
